Upgrade project to Java 17, bump version to 2.2.0-SNAPSHOT, and refactor Kerberos/PAC tests (#30)
* Upgrade build to Java 17, bump version to 2.2.0-SNAPSHOT, and refactor Kerberos/PAC tests to use JAAS and public APIs

* Remove disabled testSessionExpiration method from KerberosTest

* Replace new Integer(...) with Integer.valueOf(...) in NetBIOS name service clients